# django-decorator-include

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  README.rst  bootstrap.py  decorator_include.py  pyproject.toml  requirements.txt  runtests.sh  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: build.yml
src/decorator_include/: __init__.py
src/decorator_include/tests/: __init__.py  included.py  included2.py  tests.py  urls.py
src/decorator_include/tests/testproject/: settings.py
testproject/: settings.py
tests/: included.py  included2.py  settings.py  tests.py  urls.py
