[build-system]
requires = [
    "setuptools==75.3.4; python_version<'3.9'",
    "setuptools>=77.0; python_version>='3.9'",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-decorator-include"
version = "3.5"
description = "Include Django URL patterns with decorators"
readme = "README.rst"
requires-python = ">=3.6"
license = "BSD-2-Clause"
keywords = ["django", "urls"]
authors = [
    { name = "Jeff Kistler", email = "jeff@jeffkistler.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Framework :: Django :: 6.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Django>=2.2",
    'importlib_metadata; python_version<"3.8"',
]

[project.urls]
Homepage = "https://github.com/twidi/django-decorator-include"
Source = "https://github.com/twidi/django-decorator-include"

[tool.setuptools]
py-modules = ["decorator_include"]
zip-safe = true
license-files = ["LICENSE"]

[tool.flake8]
max-line-length = 119
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
]
ignore = [
    "E101", "E111", "E114", "E115", "E116", "E117",
    "E12", "E13", "E2", "E3", "E401", "E5", "E70",
    "W1", "W2", "W3", "W5",
]

[tool.isort]
profile = "django"
