[metadata]
name = django-decorator-include
version = 3.0
author = Jeff Kistler
author_email = jeff@jeffkistler.com
url = https://github.com/twidi/django-decorator-include
description = Include Django URL patterns with decorators
long_description = file: README.rst
license = BSD
license_file = LICENSE
keywords = django, urls
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = True
py_modules = decorator_include
install_requires = Django>=2.0
python_requires = >=3.4

[options.extras_require]
dev =
    flake8
    isort

[flake8]
max-line-length = 119

[isort]
default_section = THIRDPARTY
known_first_party = decorator_include
known_django = django
sections = STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
line_length = 79
multi_line_output = 5
not_skip = __init__.py
skip = .tox
