[metadata]
name = django-decorator-include
version = 3.0
author = Jeff Kistler
author_email = jeff@jeffkistler.com
url = https://github.com/twidi/django-decorator-include
description = Include Django URL patterns with decorators
long_description = file: README.rst
license = BSD
license_file = LICENSE
keywords = django, urls
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP

[options]
zip_safe = True
py_modules = decorator_include
install_requires =
    Django>=2.2
    importlib_metadata; python_version<"3.8"
python_requires = >=3.6

[flake8]
max-line-length = 119

[isort]
profile = django
